--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,13 +1,13 @@
 footer {
     border-top: 0.5px solid #ddd;
-    margin-top: 40px;
+    margin-top: auto;
     padding: 20px;
     text-align: center;
 }
 
 footer a {
     color: #9e9e9e;
-    font-size: 12px;
+    font-size: 1.2rem;
 }
 
 footer ul {
